[gd_scene load_steps=7 format=3 uid="uid://c6rg4s4ymckxo"]

[ext_resource type="Theme" uid="uid://c6u12sw5jxmbr" path="res://themes/OptionsScreen.theme" id="1_d83i7"]
[ext_resource type="Script" uid="uid://dcfq2hn8qv4k" path="res://scenes/pause_screen.gd" id="1_jop2b"]
[ext_resource type="Theme" uid="uid://dctpcbq0vp6lp" path="res://themes/TitleScreen.theme" id="1_k5a5s"]
[ext_resource type="Shader" uid="uid://bb3ormchtf5f1" path="res://scenes/Blur.gdshader" id="2_hdbvb"]
[ext_resource type="FontFile" uid="uid://c8l7xewo111n3" path="res://themes/Tinos-Regular.ttf" id="3_oe56i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x5es7"]
shader = ExtResource("2_hdbvb")
shader_parameter/lod = 2.0

[node name="PauseScreen" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jop2b")

[node name="Overlay" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_x5es7")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85490197)

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay"]
layout_mode = 0
offset_left = 369.0
offset_top = 189.5
offset_right = 783.0
offset_bottom = 458.5
theme_override_constants/separation = 22

[node name="PauseLabel" type="Label" parent="Overlay/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k5a5s")
text = "PAUSA"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Overlay/VBoxContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
theme = ExtResource("1_d83i7")

[node name="MarginContainer" type="MarginContainer" parent="Overlay/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Continue" type="Button" parent="Overlay/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Continuar"

[node name="Map" type="Button" parent="Overlay/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Selecionar Fase"

[node name="Exit" type="Button" parent="Overlay/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Menu Principal"

[node name="HintLabel" type="Label" parent="Overlay/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.43137255)
theme_override_fonts/font = ExtResource("3_oe56i")
theme_override_font_sizes/font_size = 16
text = "Que tal uma xícara de café?"
horizontal_alignment = 1

[connection signal="pressed" from="Overlay/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Overlay/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Map" to="." method="_on_map_pressed"]
[connection signal="pressed" from="Overlay/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
